# SpinExplorer

./: pyproject.toml
src/SpinExplorer/SpinConverter/: SpinConverter.py
src/SpinExplorer/SpinConverter/Conversion/: convert_nmrglue.py  convert_pipe.py
src/SpinExplorer/SpinConverter/FindingParameters/: bruker_parameters.py  parameters.py  varian_parameters.py
src/SpinExplorer/SpinConverter/FormattingGUI/: bruker_formatting.py  shared_formatting.py  varian_formatting.py
src/SpinExplorer/SpinConverter/StoringParameters/: read_parameters.py  save_parameters.py
src/SpinExplorer/SpinProcess/: SpinProcess.py
src/SpinExplorer/SpinProcess/ReadingData/: read_fid.py
src/SpinExplorer/SpinView/: SpinView.py
